fix: изменил тесты для сборки задач 101 102 103 105 106 107 и styleFix